@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-05-16T01:20:18Z",
+  "timestamp" : "2024-05-16T08:18:46Z",
   "count_outdated" : 4120,
   "uniques_outdated" : 1952,
-  "count" : 4205,
-  "uniques" : 2013,
+  "count" : 4206,
+  "uniques" : 2014,
   "clones" : [
     {
       "timestamp": "2024-05-02T00:00:00Z",
-      "count": 45,
+      "count": 38,
       "count_minmax": [ 7, 45 ],
-      "count_decinc": [ 0, 45 ],
-      "uniques": 29,
+      "count_decinc": [ 7, 45 ],
+      "uniques": 25,
       "uniques_minmax": [ 6, 29 ],
-      "uniques_decinc": [ 0, 29 ]
+      "uniques_decinc": [ 4, 29 ]
     },
     {
       "timestamp": "2024-05-03T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-05-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
