@@ -1,11 +1,11 @@
 {
-  "count": 85,
-  "uniques": 47,
+  "count": 79,
+  "uniques": 44,
   "clones": [
     {
       "timestamp": "2024-05-02T00:00:00Z",
-      "count": 45,
-      "uniques": 29
+      "count": 38,
+      "uniques": 25
     },
     {
       "timestamp": "2024-05-03T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2024-05-15T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-05-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
